# risk-lens

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
backend/: .env.example  CLAUDE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10f9ad754ed7_add_locale_to_user_preferences.py  477bdc0e6d7e_init.py  4e0be14a42b0_add_user_preferences.py  ad2543a95b48_add_reports_table.py  cd590eb40e4c_add_user_alerts_and_user_notifications.py  fef454db6d9d_add_user_risk_profile.py
backend/app/: main.py
backend/app/api/v1/: alerts.py  markowitz.py  portfolios.py  profile.py  report.py  risk.py  stress.py
backend/app/core/: cache.py  config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  calculation_cache.py  portfolio.py  report.py  user.py  user_alert.py  user_preferences.py  user_risk_profile.py
backend/app/schemas/: alert.py  explain.py  markowitz.py  portfolio.py  profile.py  report.py  risk.py  stress.py
backend/app/services/: explain_service.py  market_data.py  markowitz_engine.py  mistral_service.py  montecarlo_engine.py  risk_engine.py  risk_profiler_service.py  stress_engine.py
backend/tests/: test_markowitz_engine.py  test_montecarlo_engine.py  test_risk_engine.py  test_stress_engine.py
frontend/: CLAUDE.md  bun.lockb  components.json  package.json
frontend/i18n/: request.ts
frontend/messages/: en.json  es.json  fr.json  zh.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-outside-click.tsx
frontend/src/types/: api.ts  (+6 more)
(+81 files in other folders)
